--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -11,7 +11,7 @@
 
 ::-webkit-scrollbar-thumb {
     background-color: #c1c1c1;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3)
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -20,7 +20,7 @@
 
 ::-webkit-scrollbar-track {
     background-color: #f1f1f1;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3)
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
 }
 
 .footer {
@@ -31,4 +31,17 @@
 .footer-down{
     padding: 20px !important; 
     font-size:15px;
+}
+
+.menu-item .active .menu-icon .sv .dark{
+    display: none !important; 
+}
+.menu-item .menu-link .menu-icon .sv .dark{
+    display: block !important; 
+}
+.menu-item .active .menu-icon .sv .light{
+    display: block !important; 
+}
+.menu-item .menu-link .menu-icon .sv .light{
+    display: none !important; 
 }
